syntax = "proto3";

package acks_v1;

service AckService {
  rpc AckMessage(AckRequest) returns (AckResponse);
  rpc AckBulk(AckBulkRequest) returns (AckBulkResponse);
  rpc NackMessage(NackRequest) returns (NackResponse);
  rpc NackBulk(NackBulkRequest) returns (NackBulkResponse);
}
  
message AckRequest {
  string queue_name = 1;
  string message_uuid = 2;
}

message AckBulkRequest {
  repeated AckRequest ack_requests = 1;
}

message NackRequest {
  string queue_name = 1;
  string message_uuid = 2;
  bool requeue = 3;
}

message NackBulkRequest {
  repeated NackRequest nack_requests = 1;
}

message AckResponse {
  bool success = 1;
  string error_message = 2;
}

message AckBulkResponse {
  bool success = 1;
  string error_message = 2;
}

message NackResponse {
  bool success = 1;
  string error_message = 2;
}

message NackBulkResponse {
  bool success = 1;
  string error_message = 2;
}